Prioritise exact string match when searching for cover files

Previously we would search for globs like "*cover*", which would rank "case
cover back inner.jpg" higher than "cover.jpg". Now we set exact matches
to "cover", "coverimage", "folder", and "albumart" to the highest priority.

BUG: 470529